--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "registry": "npm",
-  "dependencies": {
-    "events": "1.0.2"
+  "main": "./events.js",
+  "registry": "github",
+  "map": {
+    "./events.js": {
+      "node": "@node/events"
+    }
   }
 }
